--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -47,6 +47,7 @@ const currentYear = new Date().getFullYear();
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 		<meta name="description" content={description} />
+		<meta name="robots" content="index, follow" />
 		<meta name="google-site-verification" content="p-TMFQiYQvWsK5Tn417NrhsVXZUOlO0riWjvgMm-zSI" />
 		
 		<!-- Open Graph / Facebook -->
@@ -59,6 +60,8 @@ const currentYear = new Date().getFullYear();
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image" />
+		<meta name="twitter:site" content="@CollinWilkins7" />
+		<meta name="twitter:creator" content="@CollinWilkins7" />
 		<meta property="twitter:title" content={title} />
 		<meta property="twitter:description" content={description} />
 		<meta property="twitter:image" content={imageURL} />
